Fixed file path reference

--- a/Titanic ML.ipynb
+++ b/Titanic ML.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,15 +180,15 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 645,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "fp = r'C:\\Users\\jamesPC\\OneDrive\\NW Data Science\\Practical Machine Learning\\Module 1 - Introduction to Machine Learning\\datasets\\titanic\\train.csv'\n",
-    "\n",
+    "#fp = r'C:\\Users\\jamesPC\\OneDrive\\NW Data Science\\Practical Machine Learning\\Module 1 - Introduction to Machine Learning\\datasets\\titanic\\train.csv'\n",
+    "fp = 'train.csv'\n",
     "with open(fp, 'r') as f:\n",
     "    data = pd.read_csv(f)\n",
     "\n",
